{
    "name": "DefaultInputActions",
    "maps": [
        {
            "name": "DefaultKeyboard",
            "id": "3f9bcd6e-e740-4129-9fb4-a29172ff848a",
            "actions": [
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "ca8eb9ec-9b81-4bba-b30f-d4a232d32e75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "81a59428-e368-419c-886f-1d3387320780",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveInput",
                    "type": "Value",
                    "id": "eeedaf70-c196-445a-8bf5-38070b0a59d1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "68f36159-20da-4219-a657-9eb6ac26db36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "592a3b02-1b57-40ae-b6b6-4c02e707ee47",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b52385d3-3a2b-48e8-89da-ad9efad6ae23",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a9f724a-00fc-4930-8ac0-6c5cbf242121",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "20952d6e-d2fa-4458-8d0b-6295e34a724a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "799c18ed-b61f-47b8-a078-12d0a13d0a66",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ad9e8574-3268-485e-bc2d-d60b72e960c2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3aced708-abbc-44e8-b08d-dda61f864343",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "02e58368-910b-45ba-b567-951426b84fdf",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "b63e3da8-22b4-482b-b317-f395b0e790c4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b0513e5f-08c5-44e2-ae7f-bd753c508a13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aa224ec1-cd5e-4e90-8890-12df20ffe3a8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8392e43a-fabe-499f-9a20-d3ea6dd6100a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "afc024f9-f09b-4692-a25c-3366521bf535",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "464428c1-98e4-4341-9009-edb5f8998a28",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DefaultController",
            "id": "89246896-21ba-481b-9292-33c1c4560e6f",
            "actions": [
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "ac2e0611-8a73-46d8-bc08-fe9b72a3fc8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "bfdce821-be60-4b0e-8a26-ad02ba08de23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveInput",
                    "type": "Value",
                    "id": "c47c5ff9-c956-4758-a3aa-b66b81532f70",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "8ee7c2fd-697f-4914-b69b-563bf1843ebd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5feee0f9-a144-4cbf-834f-202fb4e3741f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2e47fe1-5b57-4349-9e83-324a19a7022c",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e422df4-189a-41e8-a22d-c2bf716db4bb",
                    "path": "<Gamepad>/start",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb273a32-675f-4090-bfe0-2a8795ec5405",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DefaultTouch",
            "id": "e4928cab-0728-44b7-b8cd-b078e2d19987",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9db45468-e62b-4d00-aacc-f3cd89dc04ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0f0c0837-cc40-4aa0-b6e6-392df238b390",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}